--- a/GCI-Test/GCI-Test.csproj
+++ b/GCI-Test/GCI-Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -22,5 +22,18 @@
   <ItemGroup>
     <ProjectReference Include="..\GCI-Function-App\GCI-Function-App.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Update="TestFiles\default\analyticsUsersOverview.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestFiles\default\configurationObject.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestFiles\default\directoryUsersOverview.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 
 </Project>
