--- a/GCI-Test/GCI-Test.csproj
+++ b/GCI-Test/GCI-Test.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis.Iam.v1" Version="1.61.0.3073" />
     <PackageReference Include="LogAnalytics.Client" Version="6.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
