--- a/GCI-Function-App/GCI-Function-App.csproj
+++ b/GCI-Function-App/GCI-Function-App.csproj
@@ -5,11 +5,15 @@
     <RootNamespace>GCI_Function_App</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Function2.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.9.0" />
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
     <PackageReference Include="Google.Apis.Admin.Directory.directory_v1" Version="1.60.0.3064" />
-    <PackageReference Include="Google.Apis.Auth" Version="1.60.0" />
+    <PackageReference Include="Google.Apis.Auth" Version="1.61.0" />
     <PackageReference Include="Google.Apis.GoogleAnalyticsAdmin.v1alpha" Version="1.60.0.3052" />
+    <PackageReference Include="Google.Apis.Iam.v1" Version="1.61.0.3073" />
     <PackageReference Include="LogAnalytics.Client" Version="6.2.0" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.21.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
